# QMS

./: .gitattributes  .gitignore  DEPLOYMENT.md  README.md  TASKS.md  render.yaml
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_supplier_mix_design_document.py  a1c3e5f7b9d2_token_expiry_login_lockout_and_drift.py  a4b5c6d7e8f9_block_supplier_lab.py  a8b9c0d1e2f3_cube_received_on.py  b1f1a1c1d1e1_phase1_master_extend.py  b2c3d4e5f6a7_phase6_analytics_indexes.py  c0d1e2f3a4b5_action_items_insitu.py  c3d4e5f6a7b8_phase7_documents.py  c6d7e8f9a0b1_dispatch_first_pour.py  c7a1d2e3f4a5_add_client_user_contractor_user_roles.py  d1e2f3a4b5c6_drop_audit_logs.py  d4e5f6a7b8c9_phase9_ncr_embeddings.py  d7e8f9a0b1c2_client_registered_rmc_lab.py  d8b2e3f4a5b6_add_email_otps_table.py  e1c2d3e4f5a6_project_scoped_model.py  e2f3a4b5c6d7_document_review.py  e8f9a0b1c2d3_ncr_retests_rmc_notify.py  f0e1d2c3b4a5_conformance_findings.py  f3a4b5c6d7e8_mix_design_document.py  f6a7b8c9d0e1_lab_report_token_flow.py
backend/app/: config.py  main.py
backend/app/ai/: agent.py  embeddings.py  graph.py  llm.py  rag.py  tools.py
backend/app/core/: body_limit.py  date_rules.py  dependencies.py  email.py  exceptions.py  external_tokens.py  fallback_log.py  project_access.py  quality_engine.py  security.py  statistics.py  storage.py
backend/app/database/: engine.py  seed.py  session.py  wipe.py
backend/app/models/: __init__.py  audit.py  auth.py  master.py  quality.py  transaction.py
backend/app/repositories/: ai_suggestion_repo.py  auth_repo.py  base_repo.py  conformance_repo.py  contractor_repo.py  cube_repo.py  (+5 more)
backend/docs/: phase6_analytics_rollup_seam.md
backend/scripts/: seed_demo.py  start.sh  wipe_db.py
backend/tests/: conftest.py  helpers.py
(+276 files in other folders)
